--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ function isEven(mk){ return parseInt(mk.split("-")[1],10) % 2 === 0; }
 function dBack(n)  { const d = new Date(); d.setDate(d.getDate()-n); return d.toISOString().split("T")[0]; }
 
 // ─── Default data ──────────────────────────────────────────────────────────
-const DEFAULT_CLEANUP_DAY = 10;
+const DEFAULT_CLEANUP_DAY  = 10;
+const DEFAULT_AUTO_CLEANUP = true;
 const DEFAULT_ACCOUNTS = [
   { id: genId(), name: "Compte courant", type: "checking", balance: 0 },
 ];
@@ -149,7 +150,8 @@ function useStore(uid) {
   const [transactions, setTx]          = useState([]);
   const [templates,    setTpl]         = useState(DEFAULT_TPL);
   const [accounts,     setAccounts]    = useState(DEFAULT_ACCOUNTS);
-  const [cleanupDay,   setCleanupDay]  = useState(DEFAULT_CLEANUP_DAY);
+  const [cleanupDay,   setCleanupDay]   = useState(DEFAULT_CLEANUP_DAY);
+  const [autoCleanup,  setAutoCleanup]  = useState(DEFAULT_AUTO_CLEANUP);
   const saveTimer = useRef(null);
 
   // ── Load from Firestore on mount ────────────────────────────────────────
@@ -170,27 +172,28 @@ function useStore(uid) {
           })() );
         setAccounts(  (data.accounts  || DEFAULT_ACCOUNTS).map(a => ({ ...a, balance: a.balance || 0 })) );
         setCleanupDay(data.cleanupDay || DEFAULT_CLEANUP_DAY);
+        setAutoCleanup(data.autoCleanup !== undefined ? data.autoCleanup : DEFAULT_AUTO_CLEANUP);
       } else {
         // First time: save sample data
         setTx(SAMPLE_TX);
-        fbSave(uid, { transactions:SAMPLE_TX, templates:DEFAULT_TPL, accounts:DEFAULT_ACCOUNTS, cleanupDay:DEFAULT_CLEANUP_DAY });
+        fbSave(uid, { transactions:SAMPLE_TX, templates:DEFAULT_TPL, accounts:DEFAULT_ACCOUNTS, cleanupDay:DEFAULT_CLEANUP_DAY, autoCleanup:DEFAULT_AUTO_CLEANUP });
       }
       setReady(true);
     });
   }, [uid]);
 
   // ── Auto-save to Firestore (debounced 1s) ───────────────────────────────
-  const persist = useCallback((tx, tpl, acct, cd) => {
+  const persist = useCallback((tx, tpl, acct, cd, ac) => {
     if (!uid || !ready) return;
     if (saveTimer.current) clearTimeout(saveTimer.current);
     saveTimer.current = setTimeout(() => {
-      fbSave(uid, { transactions: tx, templates: tpl, accounts: acct, cleanupDay: cd });
+      fbSave(uid, { transactions: tx, templates: tpl, accounts: acct, cleanupDay: cd, autoCleanup: ac });
     }, 1000);
   }, [uid, ready]);
 
   // ── Auto-cleanup ────────────────────────────────────────────────────────
   useEffect(() => {
-    if (!ready) return;
+    if (!ready || !autoCleanup) return;
     const today = new Date();
     const currentDay = today.getDate();
     if (currentDay >= cleanupDay) {
@@ -204,16 +207,16 @@ function useStore(uid) {
         return filtered.length !== prev.length ? filtered : prev;
       });
     }
-  }, [ready, cleanupDay]);
+  }, [ready, autoCleanup, cleanupDay]);
 
   // ── Persist on every state change ───────────────────────────────────────
-  useEffect(() => { if (ready) persist(transactions, templates, accounts, cleanupDay); },
-    [transactions, templates, accounts, cleanupDay, ready, persist]);
+  useEffect(() => { if (ready) persist(transactions, templates, accounts, cleanupDay, autoCleanup); },
+    [transactions, templates, accounts, cleanupDay, autoCleanup, ready, persist]);
 
   // ── Actions ─────────────────────────────────────────────────────────────
   const add    = tx  => setTx(p => [{ ...tx, id:genId(), pointed:false }, ...p]);
   const remove = id  => setTx(p => p.filter(t => t.id !== id));
-  const update = (id, u) => setTx(p => p.map(t => t.id===id ? {...t,...u} : t));
+  const update = (id, u) => setTx(p => p.map(t => t.id===id ? {...t,...u, _tpl:undefined} : t));
   const togglePointed = id => setTx(p => p.map(t => t.id===id ? {...t,pointed:!t.pointed} : t));
 
   const addTplItem    = (accountId, parity, item) => setTpl(p => {
@@ -234,15 +237,20 @@ function useStore(uid) {
   };
 
   const addAccount    = ()          => { if (accounts.length>=10) return; setAccounts(p=>[...p,{id:genId(),name:`Nouveau compte ${p.length+1}`,type:"checking",balance:0}]); };
-  const removeAccount = id          => { if (accounts.length<=1) return; setAccounts(p=>p.filter(a=>a.id!==id)); };
+  const removeAccount = id => {
+    if (accounts.length<=1) return;
+    setAccounts(p => p.filter(a => a.id !== id));
+    setTpl(p => { const next = {...p}; delete next[id]; return next; });
+  };
   const updateAccount = (id,updates)=> setAccounts(p=>p.map(a=>a.id===id?{...a,...updates}:a));
-  const updateCleanupDay = day      => setCleanupDay(day);
+  const updateCleanupDay  = day  => setCleanupDay(day);
+  const updateAutoCleanup = val  => setAutoCleanup(val);
   const cleanupMonth  = monthKey    => setTx(prev => prev.filter(t => mKey(t.date) !== monthKey));
 
   return { ready, transactions, add, remove, update, togglePointed,
     templates, addTplItem, removeTplItem, applyTemplate,
     accounts, addAccount, removeAccount, updateAccount,
-    cleanupDay, updateCleanupDay, cleanupMonth };
+    cleanupDay, updateCleanupDay, autoCleanup, updateAutoCleanup, cleanupMonth };
 }
 
 // ─── Login Screen ──────────────────────────────────────────────────────────
@@ -733,24 +741,36 @@ function Settings({ store, user }) {
         {/* Nettoyage */}
         <Section title="Nettoyage automatique" icon="🗑️">
           <div style={{ padding:"14px 16px" }}>
-            <p style={{ fontSize:12, color:"var(--text-muted)", marginBottom:12, lineHeight:1.6 }}>
-              Le jour du mois où les transactions du mois précédent sont automatiquement supprimées.
-            </p>
-            <div style={{ display:"flex", alignItems:"center", gap:12, marginBottom:12 }}>
-              <div style={{ flex:1 }}>
-                <p style={{ fontSize:11, fontWeight:600, color:"var(--text-sub)", letterSpacing:"0.07em", textTransform:"uppercase", marginBottom:6 }}>Jour de nettoyage</p>
-                <select value={store.cleanupDay} onChange={e=>store.updateCleanupDay(parseInt(e.target.value,10))}
-                  style={{ fontSize:15, fontWeight:500, width:"100%", padding:"10px 12px", background:"var(--surface2)", border:"1px solid var(--border)", borderRadius:"var(--radius-sm)", color:"var(--text)" }}>
-                  {Array.from({length:28},(_,i)=>i+1).map(d=>(
-                    <option key={d} value={d} style={{ background:"var(--select-bg)" }}>{d===1?"1er":d} du mois</option>
-                  ))}
-                </select>
+            {/* Toggle activation */}
+            <div style={{ display:"flex", justifyContent:"space-between", alignItems:"center", marginBottom:14 }}>
+              <div>
+                <p style={{ fontSize:14, fontWeight:500 }}>Nettoyage automatique</p>
+                <p style={{ fontSize:12, color:"var(--text-muted)", marginTop:2 }}>
+                  {store.autoCleanup ? "Actif — suppression automatique du mois précédent" : "Inactif — aucune suppression automatique"}
+                </p>
               </div>
-              <div style={{ padding:"12px 16px", background:"var(--gold-dim)", border:"1px solid var(--gold)", borderRadius:"var(--radius-sm)", textAlign:"center" }}>
-                <p style={{ fontSize:10, color:"var(--text-sub)", textTransform:"uppercase", letterSpacing:"0.06em", marginBottom:2 }}>Actuel</p>
-                <p style={{ fontSize:24, fontWeight:700, fontFamily:"'DM Serif Display',serif", color:"var(--gold)" }}>{store.cleanupDay}</p>
+              <Toggle checked={store.autoCleanup} onChange={()=>store.updateAutoCleanup(!store.autoCleanup)} />
+            </div>
+
+            {/* Sélecteur de jour (grisé si désactivé) */}
+            <div style={{ opacity: store.autoCleanup ? 1 : 0.4, pointerEvents: store.autoCleanup ? "auto" : "none", transition:"opacity 0.2s" }}>
+              <div style={{ display:"flex", alignItems:"center", gap:12, marginBottom:12 }}>
+                <div style={{ flex:1 }}>
+                  <p style={{ fontSize:11, fontWeight:600, color:"var(--text-sub)", letterSpacing:"0.07em", textTransform:"uppercase", marginBottom:6 }}>Jour de nettoyage</p>
+                  <select value={store.cleanupDay} onChange={e=>store.updateCleanupDay(parseInt(e.target.value,10))}
+                    style={{ fontSize:15, fontWeight:500, width:"100%", padding:"10px 12px", background:"var(--surface2)", border:"1px solid var(--border)", borderRadius:"var(--radius-sm)", color:"var(--text)" }}>
+                    {Array.from({length:28},(_,i)=>i+1).map(d=>(
+                      <option key={d} value={d} style={{ background:"var(--select-bg)" }}>{d===1?"1er":d} du mois</option>
+                    ))}
+                  </select>
+                </div>
+                <div style={{ padding:"12px 16px", background:"var(--gold-dim)", border:"1px solid var(--gold)", borderRadius:"var(--radius-sm)", textAlign:"center" }}>
+                  <p style={{ fontSize:10, color:"var(--text-sub)", textTransform:"uppercase", letterSpacing:"0.06em", marginBottom:2 }}>Actuel</p>
+                  <p style={{ fontSize:24, fontWeight:700, fontFamily:"'DM Serif Display',serif", color:"var(--gold)" }}>{store.cleanupDay}</p>
+                </div>
               </div>
             </div>
+
             <button onClick={handleCleanupClick} style={{ width:"100%", padding:"10px", borderRadius:"var(--radius-sm)", background:"var(--red-dim)", border:"1px solid var(--red)", color:"var(--red)", fontSize:13, fontWeight:600 }}>
               🗑️ Nettoyer le mois précédent maintenant
             </button>
